<resources>
    <string name="app_name">Dictionary</string>

    <!-- List -->
    <string name="action_edit">edit</string>
    <string name="action_debug">Debug</string>
    <string name="action_card">card</string>
    <string name="toolbar_title">生词本</string>
    <string name="toolbar_delete">all selected</string>

    <!-- Debug -->
    <string name="Info">Info</string>
    <string name="print_absolute_path">Print absolute path</string>
    <string name="request_storage_permission">Request Storage Permission</string>
    <string name="current_network_speed">Current Network Speed</string>
    <string name="change_net">Change WIFI Net</string>

</resources>
