<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.camp.bit.todolist.MainActivity">

    <item
        android:id="@+id/select_all"
        android:title="ALL"
        android:icon="@drawable/ic_wait_to_check"
        app:showAsAction="always"/>
    <item
        android:id="@+id/delete_note"
        android:title=""
        android:icon="@drawable/ic_delete_list"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_card"
        android:orderInCategory="100"
        android:title="@string/action_card"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_debug"
        android:orderInCategory="100"
        android:title="@string/action_debug"
        app:showAsAction="never" />
</menu>
