<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/theme_list"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/word_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Info"
            android:textColor="@color/colorBlack"

            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="750dp"
        app:layout_constraintTop_toBottomOf="@+id/word_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_print_path"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/print_absolute_path" />

            <TextView
                android:id="@+id/text_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_request_permission"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/request_storage_permission" />

            <Button
                android:id="@+id/btn_write_files"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/current_network_speed" />

            <RelativeLayout
                android:id="@+id/re_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"

                >

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="100dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="7dp"
                    android:indeterminateBehavior="repeat"
                    android:indeterminateDrawable="@drawable/anim" />


                <TextView
                    android:id="@+id/text_files"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/loading"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="7dp"
                    android:layout_toEndOf="@+id/loading"
                    android:layout_toRightOf="@+id/loading"
                    android:textColor="@color/colorDark"
                    android:textSize="19dp" />
            </RelativeLayout>

            <Button
                android:id="@+id/change_net"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/change_net" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>